# Trexa

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  graph.py  indexing.py  search.py
backend/app/services/: embedding_service.py  file_parser.py  graph_builder.py  indexer.py  vector_store.py
backend/app/services/backend/data/: chroma.sqlite3
backend/app/services/data/: file_tree_graph.json
backend/backend/data/3ca3ffea-a038-4296-98dd-060ee353414d/: index_metadata.pickle
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Graph3D.tsx  ResultCard.css  ResultCard.tsx  SearchBar.css  SearchBar.tsx
frontend/src/services/: api.ts
